force-app/main/default/objects/Subject_Enrollment__c/Subject_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Subject Enrollment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Subject Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subject Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>