force-app/main/default/objects/Subject_Enrollment__c/fields/Student_Display__c.field-meta.xml
<CustomField>
    <fullName>Student_Display__c</fullName>
    <formula>Student__r.First_Name__c &amp; &quot; &quot; &amp;
    Student__r.Last_Name__c &amp;
    IF(
        ISBLANK(Student__r.EMSO_Text__c),
        &quot;&quot;,
        &quot;, &quot; &amp; Student__r.EMSO_Text__c
    )</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Student</label>
    <type>Text</type>
</CustomField>