force-app/main/default/objects/Subject_Enrollment__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Subject Enrollments</relationshipLabel>
    <relationshipName>Subject_Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>