force-app/main/default/objects/Subject_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Student_Display__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>